--- a/dashboards/templates/dashboards/general.html
+++ b/dashboards/templates/dashboards/general.html
@@ -7,9 +7,9 @@
 {% endblock style %}
 
 {% block javascript %}
-
-    <script type="text/javascript" src="{% static "analytics/js/charts.js" %}"></script>
-    <script type="text/javascript" src=" {% static "dashboards/js/behavior.js" %} "></script>
+    {% for file in javascript_files %}
+         <script type="text/javascript" src="{% static file %}"></script>
+    {% endfor %}
 {% endblock javascript %}
 
 {% block breadcrumbs %}
@@ -41,92 +41,7 @@
     </section>
 
     <section id="general-report">
-        <header id="general-report-header">
-            <h3>{% trans "Amadeus Report" %}</h3>
-
-            <ul id="report-header-options">
-                <li  class="selected">
-                    {% trans "Focus" %}
-                </li>
-                <li>
-                    {% trans "Log" %}
-                </li>
-            </ul>
-        </header> 
-
-        <article class="report-body">
-            
-            <section id="most-used-tags">
-                <header id="most-used-tags-header">
-                    <h4 >
-                        {% trans "most used tags" %}
-                    </h4>
-                </header>
-                <div id="most-used-tags-body">
-                    
-                </div>
-            </section>
-            <section class="bottom-section">
-                <div class="chart left-chart">
-                 
-                    <h4>{% trans "Most accessed " %}</h4>
-                    <div id="left-data-selector">
-
-                      
-                                <div class="selector" data-url="categories">
-                                    <p>  {% trans "Categories" %} </p>
-                                    <i class="fa fa-2x pull-right fa-angle-right" aria-hidden="true" style=""></i>
-                                </div>
-                          
-                                <div class="selector" data-url="subjects">
-                                   <p> {% trans "Subjects" %} </p>
-                                   <i class="fa fa-2x pull-right fa-angle-right" aria-hidden="true" style=""></i>
-                                </div>
-                           
-                                <div class="selector" data-url="resources">
-                                   <p> {% trans "Resource" %} </p>
-                                   <i class="fa fa-2x pull-right fa-angle-right" aria-hidden="true" style=""></i>
-                                </div>
-                         
-                    </div>
-
-                </div>
-                <div class="chart middle-chart">
-                    <article>
-                        <h4>{% trans "Most active users" %}</h4>
-                    </article>
-                  
-                </div>
-                <div class="chart right-chart">
-                    <div id="month_selector_div">
-                        <h4>{% trans "Amount of access in: " %}
-                        <select id="month_selector">
-                            {% for month in months  %}
-                                <option>{{month}}</option>
-                            {% endfor %}
-
-                        </select>
-                        </h4>
-                    </div>
-
-                    <div id="right-chart-body">
-                        
-                    </div>
-                    
-                    <div class='input-group date'>
-                        <label>{% trans "Select the begin of the week: " %}</label>
-                        <input type='text' class="datepicker form-control"  />
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-calendar"></span>
-                        </span>
-                    </div>
-                    <div id="bottom-right-chart-body">
-                        
-                    </div>
-                </div>
-            </section>
-
-        </article>
+        {% include child_template %}
     </section>
 
     <script type="text/javascript">
