--- a/dashboards/static/dashboards/css/general.sass
+++ b/dashboards/static/dashboards/css/general.sass
@@ -20,25 +20,26 @@ $title-color: #009688
         width: 50%
         margin-bottom: 0px
 
-        li
-            margin-right: 2%
-            width: 50%
-            color: white
-            font-size: 20px
-            background-color: #0f8a9a
+        a
             width: 100%
-            text-align: center
-            border-radius: 20px
-            height: 30px
+
+   
+li.tab-option
+    margin-right: 2%
+    color: white
+    font-size: 20px
+    background-color: #0f8a9a
+    width: 100%
+    text-align: center
+    border-radius: 20px
+    height: 30px
 
 
-        li.selected
-            background-color: #4dcfbd 
-            width: 100%
-            text-align: center
-            border-radius: 20px
-
-         
+li.selected
+    background-color: #4dcfbd 
+    width: 100%
+    text-align: center
+    border-radius: 20px         
                
 
 
@@ -151,3 +152,9 @@ $title-color: #009688
     background: #52b7bd
     color: white
     text-align: center
+
+
+//LOG CLASSES AND ID's
+
+#period-selector
+    display: flex
