finished styling table content, still missing way to handle context data

--- a/dashboards/static/dashboards/css/general.css
+++ b/dashboards/static/dashboards/css/general.css
@@ -137,4 +137,14 @@ li.selected {
 #period-selector {
   display: flex; }
 
+#log-table tr {
+  height: 25px; }
+  #log-table tr:nth-child(odd) {
+    background-color: #bdbdbd; }
+  #log-table tr:nth-child(even) {
+    background-color: white; }
+  #log-table tr td {
+    margin-right: 1%;
+    padding-right: 1%; }
+
 /*# sourceMappingURL=general.css.map */
