--- a/dashboards/static/dashboards/css/general.sass
+++ b/dashboards/static/dashboards/css/general.sass
@@ -158,3 +158,17 @@ li.selected
 
 #period-selector
     display: flex
+
+$colors: gray, white
+
+#log-table
+    tr
+        height: 25px
+        &:nth-child(odd)
+            background-color: #bdbdbd
+        &:nth-child(even)
+            background-color: white
+
+        td
+            margin-right: 1%
+            padding-right: 1%
