--- a/dashboards/static/dashboards/css/general.sass
+++ b/dashboards/static/dashboards/css/general.sass
@@ -162,6 +162,8 @@ li.selected
 $colors: gray, white
 
 #log-table
+    width: 100%
+    border: 1px solid #bdbdbd
     tr
         height: 25px
         &:nth-child(odd)
@@ -172,3 +174,21 @@ $colors: gray, white
         td
             margin-right: 1%
             padding-right: 1%
+
+#log-count
+    text-align: center
+
+.pagination 
+    display: inline-block
+    a  
+        color: black
+        float: left
+        padding: 8px 16px
+        text-decoration: none
+
+    a.active
+        background-color: #4CAF50
+        color: white
+    
+    a:hover:not(.active) 
+        background-color: #ddd
