modified log table, now it supports sorting in every column and a show option, still need to remove search options and others

--- a/dashboards/templates/dashboards/general.html
+++ b/dashboards/templates/dashboards/general.html
@@ -3,7 +3,10 @@
 {% load static i18n pagination %}
 {% load django_bootstrap_breadcrumbs %}
 {% block style %}
-    <link rel="stylesheet" type="text/css" href="{% static 'dashboards/css/general.css' %}">  
+    {% for file in style_files %}
+        <link rel="stylesheet" type="text/css" href="{% static file %}">
+    {% endfor %}
+   
 {% endblock style %}
 
 {% block javascript %}
