--- a/dashboards/static/dashboards/css/general.sass
+++ b/dashboards/static/dashboards/css/general.sass
@@ -22,7 +22,8 @@ $title-color: #009688
 
         a
             width: 100%
-
+            text-decoration: none
+        
    
 li.tab-option
     margin-right: 2%
@@ -33,7 +34,8 @@ li.tab-option
     text-align: center
     border-radius: 20px
     height: 30px
-
+    &:hover
+        background-color: #bdbdbd
 
 li.selected
     background-color: #4dcfbd 
