transfered update cycle to click of a button and introduced disabled routine

--- a/dashboards/templates/dashboards/log.html
+++ b/dashboards/templates/dashboards/log.html
@@ -25,7 +25,7 @@
                         </div>
                     </div>
                 </div>
-                <button class="btn btn-success btn-lg">{% trans "search" %}</button>         
+                <button id="search" class="btn btn-success btn-lg">{% trans "search" %}</button>         
             </div>
         <header id="general-report-header">
             <h3>{% trans "Amadeus Report" %}</h3>
