modified cssand organization of category dashboard

--- a/dashboards/static/dashboards/css/dashboards_category.css
+++ b/dashboards/static/dashboards/css/dashboards_category.css
@@ -14,4 +14,8 @@
 #category-selector option:hover {
   background: red; }
 
+.chart-side {
+  float: left;
+  width: 40%; }
+
 /*# sourceMappingURL=dashboards_category.css.map */
