--- a/bulletin/templates/bulletin/_form.html
+++ b/bulletin/templates/bulletin/_form.html
@@ -27,7 +27,7 @@
 	</div>
 
 	<div class="form-group{% if form.has_error %} has-error {% endif %} is-fileinput">
-		<label for="{{ form.content.auto_id }}">{{ form.content.label }} <span>*</span></label>
+		<label for="{{ form.content.auto_id }}">{{ form.content.label }} </label>
 		{% render_field form.content class='form-control text_wysiwyg' %}
 
 		<span id="helpBlock" class="help-block">{{ form.content.help_text }}</span>
@@ -67,6 +67,49 @@
 			</div>
 		{% endif %}
 	</div>
+
+	<div class="form-group{% if form.has_error %} has-error {% endif %} is-fileinput">
+		<label for="{{ form.file_content.auto_id }}">{{ form.file_content.label }} <span>*</span></label>
+		{% render_field form.file_content class='file-selector' %}
+
+		<div class="input-group common-file-input">
+					<input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose your file...' %}">
+					<span class="input-group-btn input-group-sm">
+						<button type="button" class="btn btn-fab btn-fab-mini">
+							<i class="material-icons">attach_file</i>
+						</button>
+					</span>
+			</div>
+
+			<div class="filedrag">
+				{% if bulletin %}
+					<i class="fa fa-file-archive-o"></i> <br />
+
+					<small>{{ bulletin.filename }}</small>
+				{% else %}
+						{% trans 'Click or drop the .xls file with the goals data' %}<br />
+
+						<small>{% trans 'The file could not exceed 1MB.' %}</small>
+					{% endif %}
+			</div>
+
+		<span id="helpBlock" class="help-block">{{ form.file_content.help_text }}</span>
+
+		{% if form.file_content.errors %}
+			<div class="alert alert-danger alert-dismissible" role="alert">
+					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				<ul>
+					{% for error in form.file_content.errors %}
+						<li>{{ error }}</li>
+					{% endfor %}
+				</ul>
+			</div>
+		{% endif %}
+	</div>
+
+
 
 	<div class="form-group{% if form.has_error %} has-error {% endif %} is-fileinput">
 		<label for="{{ form.tags.auto_id }}">{{ form.tags.label }}</label>
@@ -197,81 +240,7 @@
             </div>
         </div>
 
-        <div class="panel panel-info">
-			<div class="panel-heading">
-    			<div class="row">
-        			<div class="col-md-12">
-            			<a data-parent="#professors_accordion" data-toggle="collapse" href="#students">
-            				<h4 class="panel-title">
-                    			<button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button><label for="{{ form.students.auto_id }}">{{ form.students.label }}</label>
-            				</h4>
-            			</a>
-            		</div>
-            	</div>
-            </div>
-            <div id="students" class="panel-collapse collapse">
-            	<div class="form-group{% if form.has_error %} has-error {% endif %}">
-            		<div class=" checkbox">
-            			<label for="{{ form.all_students.auto_id }}">
-	      					{% render_field form.all_students %} {{ form.all_students.label }}
-	  					</label>
-	  				</div>
 
-	  				<span id="helpBlock" class="help-block">{{ form.all_students.help_text }}</span>
-
-					{% if form.all_students.errors %}
-						<div class="alert alert-danger alert-dismissible" role="alert">
-								<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-									<span aria-hidden="true">&times;</span>
-								</button>
-							<ul>
-								{% for error in form.all_students.errors %}
-									<li>{{ error }}</li>
-								{% endfor %}
-							</ul>
-						</div>
-					{% endif %}
-            	</div>
-
-            	<p><em>{% trans 'Attribute students to bulletin' %}:</em></p>
-            	{% render_field form.students class='form-control' %}
-
-            	<span id="helpBlock" class="help-block">{{ form.students.help_text }}</span>
-
-				{% if form.students.errors %}
-					<div class="alert alert-danger alert-dismissible" role="alert">
-							<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-								<span aria-hidden="true">&times;</span>
-							</button>
-						<ul>
-							{% for error in form.students.errors %}
-								<li>{{ error }}</li>
-							{% endfor %}
-						</ul>
-					</div>
-				{% endif %}
-
-            	<br clear="all" />
-
-            	<p><em>{% trans 'Attribute groups to bulletin' %}:</em></p>
-            	{% render_field form.groups class='form-control' %}
-
-            	<span id="helpBlock" class="help-block">{{ form.groups.help_text }}</span>
-
-				{% if form.groups.errors %}
-					<div class="alert alert-danger alert-dismissible" role="alert">
-							<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-								<span aria-hidden="true">&times;</span>
-							</button>
-						<ul>
-							{% for error in form.groups.errors %}
-								<li>{{ error }}</li>
-							{% endfor %}
-						</ul>
-					</div>
-				{% endif %}
-            </div>
-        </div>
 	</div>
 
 	<div class="form-group{% if form.has_error %} has-error {% endif %}">
