--- a/topics/templates/resources/list.html
+++ b/topics/templates/resources/list.html
@@ -45,7 +45,9 @@
 			                    	<li><a href="{% url 'goals:get_chart' resource.slug %}" class="edit"><i class="fa fa-line-chart fa-fw" aria-hidden="true"></i>{% trans 'Reports' %}</a></li>
 			                    {% elif resource|class_name == 'webconference' %}
                                     <li><a href="{% url 'webconferences:get_chart' resource.slug %}" class="edit"><i class="fa fa-line-chart fa-fw" aria-hidden="true"></i>{% trans 'Reports' %}</a></li>
-                                {% endif %}
+													{% elif resource|class_name == 'bulletin' %}
+														<li><a href="{% url 'bulletin:get_chart' resource.slug %}" class="edit"><i class="fa fa-line-chart fa-fw" aria-hidden="true"></i>{% trans 'Reports' %}</a></li>													
+                          {% endif %}
 			                    <li><a href="javascript:delete_resource('{% url resource.delete_link resource.slug %}')" class="delete"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>{% trans 'Remove' %}</a></li>
 			                </ul>
 			            </span>
