--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -711,6 +711,15 @@ a.add-row
 .semi-check
     border-color: $primary-color !important
 
+.bulletin-warning h4 
+    color: #555555
+
+.bulletin-warning p
+    color: #888888
+
+.bulletin-warning a
+    color: #4caf50
+
 @media(max-width: 768px) 
     .navbar .navbar-nav .dropdown .dropdown-menu li > a 
         color: #333333 !important
