--- a/bulletin/templates/bulletin/view.html
+++ b/bulletin/templates/bulletin/view.html
@@ -57,11 +57,11 @@
                 <hr />
 
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2 alert-warning bulletin-warning">
-                        <div class="col-md-2">
+                    <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 alert-warning bulletin-warning">
+                        <div class="col-md-2 col-sm-2">
                             <img src="{% static 'img/warning.png' %}" class="img-responsive" />
                         </div>
-                        <div class="col-md-10">
+                        <div class="col-md-10 col-sm-10">
                             <h4>{% trans 'There are obstructions to your activities?' %}</h4>
                             <p><a data-toggle="modal" data-target="#bulletin-difficulties-modal" href="">{% trans 'Click here' %}</a> {% trans 'to communicate the difficulties that may decrease your performance.' %}</p>
                         </div>
