Bulletin data display adjust

--- a/bulletin/templates/bulletin/view.html
+++ b/bulletin/templates/bulletin/view.html
@@ -67,7 +67,7 @@
                                   <th style="text-align:center" colspan="3">Dados Individuais</th>
                                 </tr>
                                 <tr>
-                                  <th style="text-align:center" colspan="">Desejada</th>
+                                  <th style="text-align:center">Desejada</th>
                                   <th style="text-align:center">Estabelecida</th>
                                   <th style="text-align:center">Alcançada</th>
                                 </tr>
@@ -78,7 +78,7 @@
                                   <td>{{ meta.description }}</td>
                                   <td></td>
                                   <td style="text-align:center">{{ meta.desejada }} %</td>
-                                  <td style="text-align:center"> %</td>
+                                  <td style="text-align:center">{{ meta.estabelecida }} %</td>
                                   <td style="text-align:center">%</td>
                                 </tr>
 
