--- a/bulletin/templates/bulletin/window_view.html
+++ b/bulletin/templates/bulletin/window_view.html
@@ -6,7 +6,7 @@
 <html>
 <head>
 	<title>{{ title }} | {{ theme.title }}</title>
-
+	<script type="text/javascript" src="{% static 'js/jquery-ui.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/jquery-3.1.0.min.js' %}"></script>
 
 	<meta http-equiv="Cache-Control" content="no-cache, no-store" />
@@ -18,10 +18,38 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'material/css/ripples.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-slider.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'font-awesome-4.6.3/css/font-awesome.min.css' %}">
-
+	<script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.min.js' %}"></script>
+	<link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.3.7/css/bootstrap.css' %}">
 	<!-- Custom styles -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/base/amadeus_responsive.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/base/amadeus.css' %}">
+
+		<link href="{{ theme.favicon_url }}" rel="shortcut icon" />
+		<!-- Roboto font -->
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-datetimepicker.css' %}">
+		<link rel="stylesheet" type="text/css" href="{% static 'css/alertifyjs/alertify.min.css' %}">
+		<link rel="stylesheet" type="text/css" href="{% static 'css/alertifyjs/themes/bootstrap.css' %}">
+
+		<script type="text/javascript" src="{% static 'material/js/material.min.js' %}"></script>
+		<script type="text/javascript" src="{% static 'material/js/ripples.min.js' %}"></script>
+		<script type="text/javascript" src="{% static 'js/moment-with-locales.js' %}"></script>
+			<script type="text/javascript" src="{% static 'js/bootstrap-datetimepicker.js' %}"></script>
+		<script type="text/javascript" src="{% static 'js/alertify.min.js' %}"></script>
+		<script type="text/javascript" src="{% static 'js/jscookie.js' %}"></script>
+			<script type="text/javascript" src="{% static 'js/jPages.js' %}"></script>
+			<script type="text/javascript" src="{% static 'js/d3.min.js' %}"></script>
+			<script type="text/javascript" src="{% static 'subjects/js/modal_subject.js' %}"></script>
+
+
+		<script type="text/javascript">$.material.init()</script>
+    <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'js/socket.js' %}"></script>
+
+		<!-- Summernote -->
+		<script src="{% static 'summernote/summernote.js' %}" type="text/javascript"></script>
+		<link href="{% static 'summernote/summernote.css' %}" type="text/css" rel="stylesheet" />
 
     {% with 'css/themes/'|add:theme.css_style|add:'.css' as theme_selected %}
         <link rel="stylesheet" type="text/css" href="{% static theme_selected %}">
