--- a/mural/templates/mural/_form.html
+++ b/mural/templates/mural/_form.html
@@ -107,6 +107,7 @@
 <script type="text/javascript">
 	$(function () {
 		$('.text_simple_wysiwyg').summernote({
+			lang: new_lang,
 			dialogsInBody: true,
 			disableDragAndDrop: true,
 			height: 150,
