--- a/mural/templates/mural/_form_comment.html
+++ b/mural/templates/mural/_form_comment.html
@@ -134,6 +134,7 @@
 		}
 
 		$('.text_simple_wysiwyg').summernote({
+			lang: new_lang,
 			dialogsInBody: true,
 			disableDragAndDrop: true,
 			height: 150,
