--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -63,6 +63,11 @@
 	<!-- Summernote -->
 	<script src="{% static 'summernote/summernote.js' %}" type="text/javascript"></script>
 	<link href="{% static 'summernote/summernote.css' %}" type="text/css" rel="stylesheet" />
+
+    {% with 'summernote/lang/summernote-'|add:LANGUAGE_CODE|add:'.js' as summer_lang %}
+        <script src="{% static summer_lang %}" type="text/javascript"></script>
+    {% endwith %}
+
 	{% if contrast_cookie %}
 	    <link rel="stylesheet" type="text/css" href="{% static 'css/themes/contrast.css' %}">
 	{% else %}
@@ -71,9 +76,11 @@
 		{% endwith %}
 	{% endif %}
 
-
-
-
+    <script type="text/javascript">
+        var lang = "{{ LANGUAGE_CODE }}";
+        var array = lang.split('-');
+        var new_lang = array[0] + '-' + array[1].toUpperCase();
+    </script>
 </head>
 <body data-lang="{{ LANGUAGE_CODE }}">
     {% block nav %}
@@ -309,6 +316,8 @@
     <!-- Language selector code -->
 
     <script>
+
+
       $(".language-item").click(function(event) {
 
         change_language.post("{% url 'set_language' %}", {'language': $(this)[0].attributes[1].value, next: "{% url 'users:login' %}", csrfmiddlewaretoken: '{{ csrf_token }}' } );
