--- a/chat/templates/chat/_form.html
+++ b/chat/templates/chat/_form.html
@@ -64,7 +64,9 @@
 
 <script type="text/javascript">
 	$(function () {
+		
 		$('.text_simple_wysiwyg').summernote({
+			lang: new_lang,
 			dialogsInBody: true,
 			disableDragAndDrop: true,
 			height: 150,
