Adjusting bulletin view responsivity

--- a/bulletin/templates/bulletin/window_view.html
+++ b/bulletin/templates/bulletin/window_view.html
@@ -98,8 +98,8 @@
 						</div>
 
 				<div class="row">
-					<div class="col-md-8 col-md-offset-2 alert-warning bulletin-warning">
-						<div class="col-md-2">
+					<div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 alert-warning bulletin-warning">
+						<div class="col-md-2 col-sm-2">
 							<img src="{% static 'img/warning.png' %}" class="img-responsive" />
 						</div>
 						<div class="col-md-10 col-sm-10">
