--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -64,9 +64,7 @@
 	<script src="{% static 'summernote/summernote.js' %}" type="text/javascript"></script>
 	<link href="{% static 'summernote/summernote.css' %}" type="text/css" rel="stylesheet" />
 
-    {% with 'summernote/lang/summernote-'|add:LANGUAGE_CODE|add:'.js' as summer_lang %}
-        <script src="{% static summer_lang %}" type="text/javascript"></script>
-    {% endwith %}
+    <script src="{% static 'summernote/lang/summernote-lang.js' %}" type="text/javascript"></script>
 
 	{% if contrast_cookie %}
 	    <link rel="stylesheet" type="text/css" href="{% static 'css/themes/contrast.css' %}">
@@ -79,7 +77,14 @@
     <script type="text/javascript">
         var lang = "{{ LANGUAGE_CODE }}";
         var array = lang.split('-');
-        var new_lang = array[0] + '-' + array[1].toUpperCase();
+
+        var new_lang = array[0];
+
+        if (array.length > 1) {
+            new_lang += '-';
+            new_lang += array[1].toUpperCase();            
+        }
+
     </script>
 </head>
 <body data-lang="{{ LANGUAGE_CODE }}">
