--- a/bulletin/templates/bulletin/_form.html
+++ b/bulletin/templates/bulletin/_form.html
@@ -69,6 +69,7 @@
 	</div>
 
 	<div class="form-group{% if form.has_error %} has-error {% endif %} is-fileinput">
+		<h4>{% trans "Bulletin Data" %}</h4><hr>
 		<label for="{{ form.file_content.auto_id }}">{{ form.file_content.label }} <span>*</span></label>
 		<a href="{% url 'bulletin:download_file' file=goal_file %}"> {% trans "Click to download a xls file with the data of the goals" %}</a>
 		{% render_field form.file_content class='file-selector' %}
@@ -103,6 +104,47 @@
 					</button>
 				<ul>
 					{% for error in form.file_content.errors %}
+						<li>{{ error }}</li>
+					{% endfor %}
+				</ul>
+			</div>
+		{% endif %}
+	</div>
+
+	<div class="form-group{% if form.has_error %} has-error {% endif %} is-fileinput">
+		<label for="{{ form.indicators.auto_id }}">{{ form.indicators.label }} <span>*</span></label>
+		{% render_field form.indicators class='file-selector' %}
+
+		<div class="input-group common-file-input">
+					<input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose your file...' %}">
+					<span class="input-group-btn input-group-sm">
+						<button type="button" class="btn btn-fab btn-fab-mini">
+							<i class="material-icons">attach_file</i>
+						</button>
+					</span>
+			</div>
+
+			<div class="filedrag">
+				{% if bulletin %}
+					<i class="fa fa-file-archive-o"></i> <br />
+
+					<small>{{ bulletin.filename }}</small>
+				{% else %}
+						{% trans 'Click or drop the .xls file with the indicators data' %}<br />
+
+						<small>{% trans 'The file could not exceed 1MB.' %}</small>
+					{% endif %}
+			</div>
+
+		<span id="helpBlock" class="help-block">{{ form.indicators.help_text }}</span>
+
+		{% if form.indicators.errors %}
+			<div class="alert alert-danger alert-dismissible" role="alert">
+					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				<ul>
+					{% for error in form.indicators.errors %}
 						<li>{{ error }}</li>
 					{% endfor %}
 				</ul>
